chall-15/flask-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webdb
  template:
    metadata:
      labels:
        app: webdb
    spec:
      containers:
      - name: webdb
        image: mrxmoon/webdb-health
        resources:
          requests:
            cpu: "100m"
            memory: "100Mi" 
          limits:
            cpu: "200m"
            memory: "200Mi"
        ports:
        - containerPort: 5000
        livenessProbe:
          httpGet:
            path: /health-check
            port: 5000
          initialDelaySeconds: 13
          periodSeconds: 5
          timeoutSeconds: 2
          failureThreshold: 3
          successThreshold: 1 
---
apiVersion: v1
kind: Service
metadata:
  name: webdb-service
spec:
  selector:
    app: webdb
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
  type: ClusterIP
